welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:17: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
    T(0)=getCouleurSol()
    ^Array2:18: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
    for (i<-1 to X-1){
    ^Array2:22: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
    for (i<-0 to X-2){
    ^Array2:25: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  return T
  ^